custom.css
/* ... */
#global-graph > .graph {
  height: var(--graph-height) !important;
}

.graph-filters {
  border: 2px solid #000;
  box-shadow: 4px 4px black;
  border-radius: 8px;
}
.graph-filters li:not(:last-of-type) {
  border-bottom: 1px solid #000;
}

html[data-theme=dark] #app-container::before {
  opacity: 0.05;
}

.dark-theme,
html[data-theme=dark] {
  --ct-primary-color: #a3cef1;
  --ct-secondary-color: #6096ba;
  --ct-warning-color: #ff7262;
  --ct-success-color: #0dcf82;
  --ct-highlight-color: #d3a400;
  --color-level-1: #313942;
  --color-level-2: #38434c;
  --color-level-3: #404b55;
  --color-level-4: #525f6b;
  --color-level-5: #606e7a;
  --color-level-6: #697885;
  --ls-primary-background-color: #272c35;
  --ls-secondary-background-color: var(--color-level-1);
  --ls-tertiary-background-color: var(--color-level-2);
  --ls-quaternary-background-color: var(--color-level-3);
  --ls-border-color: var(--ls-tertiary-background-color);
  --ls-table-tr-even-background-color: var(--ls-secondary-background-color);
  --ls-primary-text-color: rgb(235, 235, 235);
  --ls-secondary-text-color: rgb(200, 200, 200);
  --ct-bold-color: #fff;
  --ls-link-text-color: var(--ct-primary-color);
  --ls-link-ref-text-color: var(--ct-primary-color);
  --ls-link-ref-text-hover-color: var(--ct-secondary-color);
  --ls-active-primary-color: var(--ct-primary-color);
  --ls-active-secondary-color: var(--ct-secondary-color);
  --ls-external-link-color: var(--ct-secondary-color);
  --ls-guideline-color: var(--ls-tertiary-background-color);
  --ls-block-bullet-color: var(--ls-tertiary-background-color);
  --ls-bullet-closed-color: var(--ls-secondary-text-color);
  --ls-block-bullet-border-color: var(--ls-quaternary-background-color);
  --ct-block-arrow-color: rgb(165, 165, 165);
  --ct-page-reference-color: var(--ls-active-primary-color);
  --ls-icon-color: var(--ls-primary-text-color);
  --ct-block-reference-background: rgba(16, 107, 163, 0.2);
  --ct-block-reference-background-hover: rgba(16, 107, 163, 0.3);
  --ls-page-properties-background-color: var(--ls-tertiary-background-color);
  --ls-scrollbar-foreground-color: var(--ls-secondary-background-color);
  --ct-header-bg-color: #272c35ee;
  --ls-selection-color: #000;
  --ls-block-highlight-color: #32445a;
}

.dark-theme .image-resize {
  filter: brightness(0.8) saturate(85%);
}

.white-theme,
.light-theme,
html[data-theme=light],
html[data-theme=white] {
  --ct-primary-color: #106ba3;
  --ct-secondary-color: #004174;
  --ct-warning-color: #ff7262;
  --ct-success-color: #0dcf82;
  --ct-highlight-color: #ffc600;
  --color-level-1: #f8f9fa;
  --color-level-2: #e9ecef;
  --color-level-3: #dee2e6;
  --color-level-4: #b9bcbe;
  --color-level-5: #aaaeb4;
  --color-level-6: #9da2a8;
  --ls-primary-background-color: #ffffff;
  --ls-secondary-background-color: var(--color-level-1);
  --ls-tertiary-background-color: var(--color-level-2);
  --ls-quaternary-background-color: var(--color-level-3);
  --ls-border-color: var(--ls-tertiary-background-color);
  --ls-table-tr-even-background-color: var(--ls-secondary-background-color);
  --ls-primary-text-color: rgb(40, 40, 40);
  --ls-secondary-text-color: #161e2e;
  --ct-bold-color: #000;
  --ls-link-text-color: var(--ct-primary-color);
  --ls-link-ref-text-color: var(--ct-primary-color);
  --ls-link-ref-text-hover-color: var(--ct-secondary-color);
  --ls-active-primary-color: var(--ct-primary-color);
  --ls-active-secondary-color: var(--ct-secondary-color);
  --ls-external-link-color: var(--ct-secondary-color);
  --ls-guideline-color: var(--ls-tertiary-background-color);
  --ls-block-bullet-color: var(--ls-tertiary-background-color);
  --ls-bullet-closed-color: var(--ls-secondary-text-color);
  --ls-block-bullet-border-color: var(--ls-quaternary-background-color);
  --ct-block-arrow-color: rgb(98, 98, 98);
  --ct-page-reference-color: var(--ls-active-primary-color);
  --ls-icon-color: var(--ls-primary-text-color);
  --ct-block-reference-background: rgba(16, 107, 163, 0.1);
  --ct-block-reference-background-hover: rgba(16, 107, 163, 0.3);
  --ls-page-properties-background-color: var(--ls-secondary-background-color);
  --ls-selection-color: #fff;
  --ct-header-bg-color: rgba(255, 255, 255, 0.9);
}

:root {
  --ls-block-bullet-threading-width: 2px;
}

/* PDF viewer */
.extensions__pdf-settings-item.theme-picker>button.dark {
    background-color: var(--ls-primary-background-color);
}
.extensions__pdf-container {
  background-color: transparent;

  &[data-theme=dark] {
    background-color: #262E37; /* not sure how to do this without hardcoding */ 

    .textLayer {
      background-color: var(--ls-primary-background-color);
      opacity: 1;
      /* mix-blend-mode: multiply; */
    }

    .extensions__pdf-hls-text-region {
      mix-blend-mode: normal;
      opacity: .4;
    }

  }
}

